--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,43 +7,9 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+    <script src="/public/js/index_modal.js" defer></script>
     <title>Document</title>
-    <style>
-        /* 모달 백그라운드 */
-        .searchModal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 10; /* Sit on top */
-            left: 0;
-            top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgb(0,0,0); /* Fallback color */
-            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-        }
-     
-        /* 모달 컨텐츠박스 */
-        .search-modal-content {
-            background-color: #fefefe;
-            margin: 15% auto; /* 15% from the top and centered */
-            padding: 20px;
-            border: 1px solid #888;
-            width: 35%; /* Could be more or less, depending on screen size */
-        }
-        /* 모달 하단 버튼영역 div */
-        .modalBtnDiv {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            
-        }
-        /* div 안 모달 버튼 */
-        .modalCloseDiv {
-            width: 300px;
-            margin-top: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="/public/css/index_modal.css">
 </head>
 
 <body>
@@ -62,7 +28,7 @@
             <input type="text" name="name" placeholder="이름"/><br/>
             <input type="text" name="userid" placeholder="아이디"><br/>
             <input type="password" name="pw" placeholder="비밀번호"><br/>
-            <input type="email" name="email" placeholder="email"><br/>
+            <input type="email" name="email" placeholder="임시 비밀번호를 받을 email"><br/>
 
             <label for="gender">성별:</label>
             <select name="gender" id="gender">
@@ -88,6 +54,7 @@
         <form name="signin-form">
             <input type="text" name="userid" placeholder="아이디"><br/>
             <input type="password" name="pw" placeholder="비밀번호"><br/>
+            <a href="/findpw">비밀번호 찾기</a>
             <button type="button" onclick="userSignin()">로그인</button>
         </form>
     </div>
@@ -145,19 +112,7 @@
 <script src="/public/js/index_socket.js" defer></script>
 
 <script>
-    //프로필 수정 모달(구현중)///////
-    if(isLogin) {
-        jQuery(document).ready(function () {
-            // $("#modal").show(); ///////////현재 모달 틀만 구성, 카카오 로그인 쪽 해결되면 입력 받을 정보에 따라 수정 예정
-        });
-        function closeModal() {
-            $('.searchModal').hide();
-        };
-        function moveProfile() {
-            window.location.href="/profile/edit"
-        }
-    }
-    //프로필 수정 모달///////
+ 
 </script>
 
 </html>
