각 페이지 인증 추가

--- a/views/boardList.ejs
+++ b/views/boardList.ejs
@@ -60,7 +60,7 @@
                         list.push(findAllData[i]);
                 
                         const data = {
-                            bord_category : findAllData[i] && findAllData[i].bord_category ? findAllData[i].bord_category : '',
+                            category : findAllData[i] && findAllData[i].category ? findAllData[i].category : '',
                             title :  findAllData[i] && findAllData[i].title ? findAllData[i].title : '',
                             views : findAllData[i] && findAllData[i].views ? findAllData[i].views : 0,
                             createAt : findAllData[i] && findAllData[i].createdAt.split('T')[0]? findAllData[i].createdAt.split('T')[0] : '',
@@ -72,7 +72,7 @@
                         <div class="imgFlex1" onclick="loadDetailModal(${i})">
                             <div class="roomImg"></div>
                             <div class="boardInfo">
-                                <div class="boxBordCategory">${data.bord_category}</div>
+                                <div class="boxBordCategory">${data.category}</div>
                                 <div class="boxTitle">${data.title}</div>
                                 <div class="boxCreateAt">${data.createAt}</div>
                                 <div class="boxViews">${data.views}</div>      
@@ -84,7 +84,7 @@
                         <div class="imgFlex2" onclick="loadDetailModal(${i})">
                             <div class="roomImg"></div>
                             <div class="boardInfo">
-                                <div class="boxBordCategory">${data.bord_category}</div>
+                                <div class="boxBordCategory">${data.category}</div>
                                 <div class="boxTitle">${data.title}</div>
                                 <div class="boxCreateAt">${data.createAt}</div>
                                 <div class="boxViews">${data.views}</div>      
@@ -107,7 +107,7 @@
     function loadDetailModal (index) {
 
         const data = {
-            bord_category : list[index] && list[index].bord_category ? list[index].bord_category : '',
+            category : list[index] && list[index].category ? list[index].category : '',
             content: list[index] && list[index].content ? list[index].content : '',
             title :  list[index] && list[index].title ? list[index].title : '',
             views : list[index] && list[index].views ? list[index].views : 0,
@@ -125,7 +125,7 @@
             <div class="bd-image"></div>
             <div class="board-detail-contents">
                 <div class="bd-info">
-                    <div class="bd-info_category"> ${data.bord_category}</div>
+                    <div class="bd-info_category"> ${data.category}</div>
                     <h2 class="bd-info_title">${data.title}</h2>
                 </div>
                 <div id="eventDetailSubInfo" class="bd-sub-content">
