--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,6 +63,7 @@
     <button onclick="logoutKaKao()">카톡 로그아웃</button> <br/>
     <br/>
     <a href="/post/new">게시글 작성</a>
+    <a href="/post">게시글 목록</a>
 </body>
 <script>
     // ejs 문법으로 값을 받아와서 사용할 경우 + 확인용 코드
