--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -4,11 +4,14 @@ body {
     padding: 0;
     background-color: #f0f0f0;
     max-width: 1200px;
+    margin: 0 auto;
 }
 
 .header {
     background-color: #007bff;
     padding: 10px 0;
+    color: white;
+    text-align: center;
 }
 
 .header-content {
@@ -21,17 +24,15 @@ body {
 }
 
 .header-title {
-    color: #fff;
     font-size: 24px;
 }
 
 /* 상단 프로필 수정 버튼 */
 .profile-edit-button {
-    background-color: #fff;
-    color: #007bff;
+    background-color: transparent;
     border: none;
-    padding: 10px 20px;
-    font-size: 16px;
+    color: white;
+    font-size: 20px;
     cursor: pointer;
 }
 
@@ -44,8 +45,12 @@ body {
     align-items: center;
     max-width: 1200px;
     justify-content: space-around;
-    
-} 
+}
+
+.left-section {
+    text-align: center;
+    margin-right: 20px;
+}
 
 /* 프로필 사진 */
 .profile-picture img {
@@ -63,34 +68,34 @@ body {
 }
 
 .user-nickname h1 {
-    font-size: 16px;
+    font-size: 20px;
     margin: 0;
 }
 
-.user-nickname p {
+.right-section p {
     font-size: 16px;
     margin: 5px 0;
 }
 
 /* 친구 수 및 게시물 작성 버튼 */
 .friend-info {
-    background-color: #fff;
+    background-color: white;
     padding: 15px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    max-width: 1200px;
     display: flex;
-    text-align: center;
+    align-items: center;
     justify-content: space-around;
-    flex-direction: row;
+    text-align: center;
 }
 
 .friend-count {
     font-size: 16px;
+    margin: 0;
 }
 
 .friend-info button {
     background-color: #007bff;
-    color: #fff;
+    color: white;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -100,9 +105,16 @@ body {
 
 /* 하단 섹션 (채팅방, 북마크, 일정) */
 .bottom-section {
+    position: relative;
     background-color: #fff;
     padding: 20px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.categories-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 /* 카테고리 버튼 */
@@ -121,42 +133,37 @@ body {
     text-align: center;
 }
 
-/* 카테고리 버튼 클릭 시 글자 색상 변경 */
-.category-button:active,
-.category-button:focus {
+.category-button.active {
     color: black;
 }
 
 .category {
-    display: inline-block;
-    width: calc(33.33% - 10px);
-    vertical-align: top;
-}
-
-.categories-container {
-    display: flex;
-    justify-content: center;
+    display: block;
+    margin-bottom: 20px;
+    flex: 1;
 }
 
 .category ul {
-    display: none;
+    background-color: #fff;
+    list-style-type: none;
+    padding: 0;
+}
+.category-list ul {
+    list-style-type: none;
+    padding: 0;
 }
 
-.category.active ul {
-    display: block;
-}
-
-.category ul li {
+.category-list li {
     font-size: 16px;
     margin: 5px 0;
 }
 
-.category ul li a {
+.category-list li a {
     text-decoration: none;
     color: #007bff;
     transition: color 0.3s;
 }
 
-.category ul li a:hover {
+.category-list li a:hover {
     color: #0056b3;
 }
